# discord-engineer-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PRIVACY-POLICY.md  README.md  TERMS-OF-SERVICE.md  bot.py  compose.yaml  main.py  pyproject.toml  requirements.txt  sigma.py  utilities.py
.github/workflows/: codeql.yml
bot/: __init__.py  main.py
bot/cogs/: Admin.py  Fun.py  Games.py  Info.py  Moderation.py  Translation.py  Utilities.py  __init__.py
bot/converters/: language.py
bot/core/: __init__.py  bot.py  config.py  help_command.py
bot/database/: __init__.py
bot/database/models/: guilds.py
bot/utilities/: __init__.py  database.py
bot/utilities/db/: __init__.py  decorators.py
bot/views/: RockPaperScissors.py  RussianRoulette.py  TicTacToe.py  __init__.py
bot/views/Games/: BuckshotRoulette.py  RockPaperScissors.py  RussianRoulette.py  TicTacToe.py  __init__.py
bot/views/Moderation/: Mutes.py
cogs/: Fun.py  Games.py  Info.py  Moderation.py  Translation.py  Utilities.py
data/: users.json
views/: rps_buttons.py  rr_buttons.py  rr_view.py  ttt_buttons.py
