[tool.poetry]
name = "discord-engineer-bot"
version = "0.1.0"
description = "A small Discord bot with some games and utilities."
authors = ["router97"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.4.0"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
langcodes = "^3.4.0"
googletrans = "3.1.0a0"
faker = "^25.9.1"
numerize = "^0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
