[project]
name = "discord-engineer-bot"
version = "0.2.0"
description = ""
authors = [
    {name = "router97",email = "router97.io@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-py (==2.6.4)",
    "python-dotenv (==1.0.1)",
    "langcodes (==3.4.0)",
    "googletrans (==3.1.0a0)",
    "numerize (==0.12)",
    "faker (==26.0.0)",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
